--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "react-dev": "webpack -d --watch",
-    "start": "nodemon server/server.js"
+    "build": "webpack",
+    "build:watch": "webpack --watch",
+    "start": "live-server ./dist/",
+    "start:server": "nodemon ./server/server.js"
   },
   "repository": {
     "type": "git",
     "url": ""
   },
-  "author": "Tom Chandler",
+  "author": "Amanda Davitt",
   "license": "ISC",
   "bugs": {
     "url": "http://www.github.com"
@@ -26,13 +28,23 @@
     "react-dom": "^16.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "chai": "^4.3.4",
+    "css-loader": "^5.2.1",
+    "eslint": "^7.24.0",
+    "eslint-plugin-react": "^7.23.2",
+    "live-server": "^1.2.1",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
   }
 }
