--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.10",
     "mysql": "^2.18.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
@@ -39,6 +40,7 @@
     "live-server": "^1.2.1",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
+    "npm-install-webpack-plugin": "^4.0.5",
     "path": "^0.12.7",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
