--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "http://www.github.com",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
